agregando dtos al simulacro servicio